--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <!-- <img src="./close_black_24dp.svg" class="btn btnCancel" alt=""> -->
 
-<!-- 
-<div class="container p-5 ">
+
+<!-- <div class="container p-5 ">
 
     <div class="insertData m-3">
         <input type="text" name="" id="inputValue">
@@ -34,11 +34,11 @@
             
         </ul>
     </div>
-</div>
+</div> -->
 
- -->
 
-<div class="container mt-3 p-5">
+
+<div class="container p-5" style="border: 1px solid black;">
 
     <div class="row">
         <div class="col-3 box-1"></div>
