--- a/index.html
+++ b/index.html
@@ -38,23 +38,29 @@
 
 
 
-<div class="container p-5" style="border: 1px solid black;">
+<div class="container-fluid px-3" >
 
-    <div class="row">
-        <div class="col-3 box-1"></div>
-        <div class="col-3 box-2"></div>
-        <div class="col-3 box-3"></div>
+    <h4 class="text-center display-4">Tic-Tac-Toe</h4>
+    <div class="row d-flex justify-content-center" >
+        <div class="col box-1"></div>
+        <div class="col box-2"></div>
+        <div class="col box-3"></div>
     </div>
-    <div class="row">
-        <div class="col-3 box-4"></div>
-        <div class="col-3 box-5"></div>
-        <div class="col-3 box-6"></div>
+    <div class="row d-flex justify-content-center">
+        <div class="col box-4"></div>
+        <div class="col box-5"></div>
+        <div class="col box-6"></div>
     </div>
-    <div class="row">
-        <div class="col-3 box-7"></div>
-        <div class="col-3 box-8"></div>
-        <div class="col-3 box-9"></div>
+    <div class="row d-flex justify-content-center">
+        <div class="col box-7"></div>
+        <div class="col box-8"></div>
+        <div class="col box-9"></div>
     </div>
+
+    <div class="d-flex justify-content-center mt-3">
+        <button class="btn btn-outline-success btn-sm" id="resetButton">Reset</button>
+    </div>
+
 
 </div>
 
